--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Grayscale - Start Bootstrap Theme</title>
+  <title> My Portfolio </title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -53,7 +53,7 @@
     <div class="container d-flex h-100 align-items-center">
       <div class="mx-auto text-center">
         <h1 class="mx-auto my-0 text-uppercase">Liang Qiu</h1>
-        <h2 class="text-white-50 mx-auto mt-2 mb-5"> IOS Developer  </h2>
+        <h2 class="text-white-50 mx-auto mt-2 mb-5"> iOS Developer  </h2>
         <a href="#about" class="btn btn-primary js-scroll-trigger">hello</a>
       </div>
     </div>
