--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <div class="row">
         <div class="col-lg-8 mx-auto">
           <h2 class="text-white mb-4"> Greetings  </h2>
-          <p class="text-white-50">  My name is Liang Qiu, a newly enrolled freshman at University of Illionis Urbana Champaign. Down below are a few projects I have worked as a new IOS developer.</p>
+          <p class="text-white-50">  My name is Liang Qiu, currently a sophomore majoring in Information Science at University of Illionis Urbana Champaign. Down below are a few projects I have worked as a new IOS developer.</p>
         </div>
       </div>
       <img src="img/ipad.png" class="img-fluid" alt="">
