--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ Your browser does not support the video tag.
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-right">
                 <h4 class="text-white">AR Intermodal Yard </h4>
-                <p class="mb-0 text-white-50">Another example of a project with its respective description. These sections work well responsively as well, try this theme on a small screen!</p>
+                <p class="mb-0 text-white-50">This Demo showcase a virtual model of a railyard. </p>
                 <hr class="d-none d-lg-block mb-0 mr-0">
               </div>
             </div>
