--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ Your browser does not support the video tag.
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
                 <h4 class="text-white">AR Tutorial</h4>
-                <p class="mb-0 text-white-50">An example of where you can put an image of a project, or anything else, along with a description.</p>
+                <p class="mb-0 text-white-50">This Demo showcase the ability to scan an painting to reveal a tutorial of how to recreate such painting. </p>
                 <hr class="d-none d-lg-block mb-0 ml-0">
               </div>
             </div>
@@ -130,7 +130,7 @@ Your browser does not support the video tag.
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-right">
                 <h4 class="text-white">AR Online</h4>
-                <p class="mb-0 text-white-50">Another example of a project with its respective description. These sections work well responsively as well, try this theme on a small screen!</p>
+                <p class="mb-0 text-white-50">This Demo showcase the ability to scan an object to determine where you could purchase your own.</p>
                 <hr class="d-none d-lg-block mb-0 mr-0">
               </div>
             </div>
@@ -151,7 +151,7 @@ Your browser does not support the video tag.
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
                 <h4 class="text-white">AR Info</h4>
-                <p class="mb-0 text-white-50">An example of where you can put an image of a project, or anything else, along with a description.</p>
+                <p class="mb-0 text-white-50">This Demo showcase how one could scan an object for more information.</p>
                 <hr class="d-none d-lg-block mb-0 ml-0">
               </div>
             </div>
@@ -193,9 +193,9 @@ Your browser does not support the video tag.
           <div class="card py-4 h-100">
             <div class="card-body text-center">
               <i class="fas fa-map-marked-alt text-primary mb-2"></i>
-              <h4 class="text-uppercase m-0">Address</h4>
+              <h4 class="text-uppercase m-0">Location</h4>
               <hr class="my-4">
-              <div class="small text-black-50">500 West Monroe St. Chicago,IL 60661</div>
+              <div class="small text-black-50">Chicago, Illinois</div>
             </div>
           </div>
         </div>
@@ -207,7 +207,7 @@ Your browser does not support the video tag.
               <h4 class="text-uppercase m-0">Email</h4>
               <hr class="my-4">
               <div class="small text-black-50">
-                <a href="#">liang.qiu2019@chi.genesysworks.org</a>
+                <a href="#">liangq4@illinois.edu</a>
               </div>
             </div>
           </div>
