--- a/index.html
+++ b/index.html
@@ -163,7 +163,16 @@ Your browser does not support the video tag.
              
     </div>
   </section>
-
+ 
+  <!-- Signup Section -->
+  <section id="signup" class="signup-section">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-10 col-lg-8 mx-auto text-center">
+        </div>
+      </div>
+    </div>
+  </section>
 
   <!-- Contact Section -->
   <section class="contact-section bg-black">
