--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div class="container d-flex h-100 align-items-center">
       <div class="mx-auto text-center">
         <h1 class="mx-auto my-0 text-uppercase">Liang Qiu</h1>
-        <h2 class="text-white-50 mx-auto mt-2 mb-5"> iOS Developer  </h2>
+        <h2 class="text-white-50 mx-auto mt-2 mb-5"> "Act as if what you do makes a difference. It does."- William James  </h2>
         <a href="#about" class="btn btn-primary js-scroll-trigger">hello</a>
       </div>
     </div>
